# SWE-Flow-Trace

./: README.md  pyproject.toml  run_tests.sh
.github/workflows/: unit-test.yml
scripts/: trace_python.sh
sweflow_trace/python/: hooks.py  trace.py
tests/: README.md  conftest.py  test_hooks.py  test_trace.py
